# excel-table-demo

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  statics.py  text_excel_table.py  transistor_example.py  user_exp.md
nagurigaki/: oekaki.drawio
pages/: step1.py  step2.py  step3.py  step4.py  step5.py
transistor/: __init__.py  analyzer.py  converter.py  display.py  generate_csv.py  model.py  normalize.py
